--- a/i3/config
+++ b/i3/config
@@ -21,6 +21,7 @@ gaps inner 7
 
 # Set windows key as modifier
 set $mod Mod4
+set $alt Mod1
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -76,6 +77,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec "rofi -show drun"
+bindsym $alt+Tab exec "rofi -show window"
 # A more modern dmenu replacement is rofi:
 # bindsym $mod+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
