--- a/i3/config
+++ b/i3/config
@@ -28,7 +28,7 @@ set $alt Mod1
 #font pango:DejaVu Sans Mono 8
 
 # Polybar
-exec_always --no-startup-id $HOME/polybar-collection/launch.sh
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Wallpaper
 exec_always --no-startup-id feh --bg-fill $HOME/Pictures/rose_pine_contourline.png
